--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "babel-loader": "^9.2.1",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
